--- a/src/app/portfolio/modal/modal.component.less
+++ b/src/app/portfolio/modal/modal.component.less
@@ -1,3 +1,5 @@
+@import '_variables.less';
+
 .app-modal {
   align-items: center;
   background-color: rgba(78,78,78,.2);
@@ -18,7 +20,12 @@
   overflow: hidden;
   position: relative;
   width: auto;
-  max-width: 1024px;
+  .rem-px(max-width, 1024);
+}
+
+.logos .modal {
+  width: auto;
+  .rem-px(max-width, 800);
 }
 
 button {
@@ -33,7 +40,7 @@ button {
 i {
   background-color: rgba(255, 255, 255, 0.8);
 }
-img {
+.img {
   z-index: 10;
 }
 
@@ -55,6 +62,7 @@ p {
 
   .img {
     width: 0%;
+    height: auto;
   }
 
   .p {
@@ -65,22 +73,10 @@ p {
 }
 
 
-.open {
+.open, .openlogo, .openlogowide {
   .overlay {
     height: 100%;
     width: 100%;
-  }
-
-  .img {
-    width: 100%;
-    max-width: 64rem;
-  }
-
-  .p {
-    height: auto;
-    width: 100%;
-    max-width: 64rem;
-    padding: .625rem;
   }
 
   .button {
@@ -88,25 +84,43 @@ p {
   }
 }
 
-.openlogo {
-  .overlay {
-    height: 100%;
-    width: 100%;
-  }
-
+.open  {
   .img {
-    width: 95vh;
+    width: 95vw;
+    max-width: 64rem;
+  }
+  .p {
+    height: auto;
+    width: 95vw;
+    max-width: 64rem;
+    padding: .625rem;
+  }
+}
+
+.openlogo {
+  .img {
+    width: 95vw;
     max-width: 38.375rem;
   }
 
   .p {
     height: auto;
-    width: 100%;
-    max-width: 64rem;
     padding: .625rem;
-  }
-
-  .button {
-    display: block;
+    width: 95vw;
+    max-width: 64rem;
   }
 }
+
+.openlogowide {
+  .img {
+    width: 95vh;
+    max-width: 38.375rem;
+  }
+  .p {
+    height: auto;
+    padding: .625rem;
+    width: 95vh;
+    max-width: 64rem;
+  }
+}
+
