--- a/src/app/portfolio/portfolio.component.less
+++ b/src/app/portfolio/portfolio.component.less
@@ -272,7 +272,7 @@ app-modal {
   width: 0%;
 }
 
-.app-modal.open, .app-modal.openlogo {
+.app-modal.open, .app-modal.openlogo, .app-modal.openlogowide {
   height: 100%;
   left: 0%;
   overflow-x: scroll;
